[package]
name = "citadel-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for Citadel encrypted database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
citadel = { path = "../../citadel" }
citadel-core = { workspace = true }
citadel-sql = { path = "../citadel-sql" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
