[package]
name = "citadel-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM bindings for Citadel encrypted database"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
citadel = { path = "../../citadel" }
citadel-core = { workspace = true }
citadel-sql = { path = "../citadel-sql" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
