[package]
name = "citadeldb-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "WASM bindings for Citadel encrypted database"
homepage.workspace = true
repository.workspace = true
keywords = ["database", "embedded-database", "encryption", "encrypted-database", "sql", "wasm", "webassembly"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
name = "citadel_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
citadel = { workspace = true }
citadel-core = { workspace = true }
citadel-sql = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
